# hcalc

./: cabal.project  hcalc.cabal
.github/workflows/: ci.yml
src/: Main.hs
