cabal-version: 3.0

name: hcalc
version: 0.1.0

author: Giulio Russo <me@giuuliorusso.me>
license: MIT
license-file: LICENSE

build-type: Simple
tested-with: GHC == { 8.8, 8.10 }

extra-source-files: README.md

source-repository head
  type: git
  location: https://github.com/giuuliorusso/hcalc.git

executable hcalc
  hs-source-dirs: src
  main-is: Main.hs

  default-language: Haskell2010
  build-depends:
    base >= 4.13 && < 4.15,
    simparser
